[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/gui/audio.png" type="Texture" id=1]
[ext_resource path="res://fonts/BebasKai.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/audio.gd" type="Script" id=3]
[ext_resource path="res://assets/shaders/transition.shader" type="Shader" id=4]
[ext_resource path="res://assets/sounds/sfx/Menu/Menu Selection Click.wav" type="AudioStream" id=5]

[sub_resource type="Environment" id=1]
glow_enabled = true
glow_intensity = 1.0
glow_strength = 0.9
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.898305, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.871186, 0.871186, 0.871186, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 4 )
shader_param/cutoff = 0.0
shader_param/smooth_size = 1.0
shader_param/mask = SubResource( 5 )

[node name="Audio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.03967
margin_top = 3.77975
margin_right = -5.03967
margin_bottom = 3.77972
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( -32.7654, -13.6365 )
scale = Vector2( 0.743929, 0.687509 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="back_options_button" type="Button" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 500.736
margin_top = 643.075
margin_right = 634.736
margin_bottom = 694.075
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.231373, 0.796078, 0.133333, 1 )
text = "BACK"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="save_button" type="Button" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 513.121
margin_top = 547.654
margin_right = 623.121
margin_bottom = 619.654
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.231373, 0.796078, 0.133333, 1 )
text = "SAVE"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="soundtest_button" type="Button" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 499.666
margin_top = 466.928
margin_right = 660.666
margin_bottom = 538.928
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.231373, 0.796078, 0.133333, 1 )
text = "SOUND TEST"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="options_title" type="Label" parent="."]
margin_left = 409.167
margin_top = 62.1292
margin_right = 711.167
margin_bottom = 129.129
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.231373, 0.796078, 0.133333, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "AUDIO SETTINGS"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="resolution_label" type="Label" parent="."]
margin_left = 307.842
margin_top = 199.843
margin_right = 601.842
margin_bottom = 265.843
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.231373, 0.796078, 0.133333, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MAIN VOLUMEN"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="fullscreen_label" type="Label" parent="."]
margin_left = 312.342
margin_top = 266.843
margin_right = 597.342
margin_bottom = 332.843
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.231373, 0.796078, 0.133333, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MUSIC VOLUME"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="fullscreen_label2" type="Label" parent="."]
margin_left = 292.342
margin_top = 337.843
margin_right = 615.342
margin_bottom = 403.843
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.231373, 0.796078, 0.133333, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "EFFECTS VOLUME"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="menu_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 681.338
margin_top = 229.639
margin_right = 755.338
margin_bottom = 253.639
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SpinBox2" type="SpinBox" parent="."]
margin_left = 680.812
margin_top = 291.069
margin_right = 754.812
margin_bottom = 315.069
editable = false
__meta__ = {
"_edit_lock_": true
}

[node name="SpinBox3" type="SpinBox" parent="."]
margin_left = 680.723
margin_top = 359.198
margin_right = 754.723
margin_bottom = 383.198
editable = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="fade_in" type="ColorRect" parent="."]
visible = false
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -11.0
margin_right = 19.0
margin_bottom = 5.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="back_options_button" to="." method="_on_back_options_button_mouse_entered"]
[connection signal="pressed" from="back_options_button" to="." method="_on_back_options_button_pressed"]
[connection signal="mouse_entered" from="save_button" to="." method="_on_save_button_mouse_entered"]
[connection signal="pressed" from="save_button" to="." method="_on_save_button_pressed"]
[connection signal="mouse_entered" from="soundtest_button" to="." method="_on_soundtest_button_mouse_entered"]
[connection signal="pressed" from="soundtest_button" to="." method="_on_soundtest_button_pressed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
